# lexgenius-pipeline

./: .env.example  .gitignore  CHANGELOG.md  README.md  REVIEW_TASK.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0581b6d98905_initial_schema.py
deploy/: README.md  requirements.txt  template.yaml
deploy/handlers/: handler_daily_report.py  handler_ingestion.py  handler_investigation.py
docs/: api-reference.md  architecture.md  database.md  deployment.md  ingestion.md  workflows.md
research/: data-sources.md
src/lexgenius_pipeline/: cli.py  settings.py
src/lexgenius_pipeline/common/: __init__.py  date_utils.py  errors.py  html_utils.py  http_client.py  logging.py  models.py  rate_limiter.py  retry.py  types.py
src/lexgenius_pipeline/db/: __init__.py  engine.py
src/lexgenius_pipeline/db/models/: __init__.py  ingestion.py  signals.py  workflow.py
src/lexgenius_pipeline/ingestion/: __init__.py  _mock.py  base.py  metrics.py  normalize.py  registry.py  runner.py  watermarks.py
src/lexgenius_pipeline/workflows/: __init__.py  orchestrator.py  task_spec.py
tests/: conftest.py
tests/integration/: conftest.py  test_connectors_live.py  test_e2e.py
tests/unit/: test_engine.py  test_models.py  test_repositories.py
tests/unit/ingestion/: conftest.py  test_base.py  test_commercial_connectors.py  test_connectors.py  test_courtlistener_regulations_gov.py  test_federal_connectors.py  test_judicial_connectors.py  test_registry.py  test_runner.py
tests/unit/workflows/: test_analysis.py  test_orchestrator.py  test_pipelines.py
(+124 files in other folders)
