[project]
name = "lexgenius-pipeline"
version = "0.1.0"
description = "Legal intelligence pipeline for mass torts and class action lawsuits"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "structlog>=24.0",
    "click>=8.0",
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
    "scipy>=1.11",
    "feedparser>=6.0",
    "pytrends>=4.9",
]

[project.optional-dependencies]
postgresql = ["asyncpg>=0.29"]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[project.scripts]
lexgenius = "lexgenius_pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lexgenius_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["live: marks tests that call real APIs (deselect with '-m not live')"]
